# prodway.ai

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CNAME  Dockerfile  ENV_TEMPLATE.txt  KEYS_NEEDED.md  README.md  SETUP.md  claude.md  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: no-coauthor-trailer.mdc
.github/workflows/: ci.yml  pages.yml
apps/dealflow/: Dockerfile  README.md  main.py  requirements.txt
apps/formpilot/: README.md  manifest.json
apps/formpilot-api/: .env.example  main.py  requirements.txt  usage_db.py
apps/formpilot/background/: background.js
apps/formpilot/content/: content.css  content.js  overlay-manager.js
apps/formpilot/injected/: webmcp-validate.js
apps/formpilot/lib/: constants.js  form-detector.js
apps/formpilot/options/: options.css  options.html  options.js
apps/formpilot/popup/: popup.css  popup.js  (+1 more)
apps/sowflow/: Dockerfile  QUICKSTART.md  README.md  main.py  requirements.txt  setup-local.sh
apps/web/: index.html  package.json  tailwind.config.ts
docker/: Dockerfile  docker-compose.yml  init.sql
implement-sowflow-prodway.ai/: api-spec.md  chat-qa.md  implementation-plan.md
k8s/base/: dealflow-deployment.yaml  dealflow-service.yaml  namespace.yaml  sowflow-deployment.yaml  sowflow-service.yaml
scripts/: bump-formpilot-version.py  check-no-cursor-coauthor.sh  export_training_data.py  pre-commit-bump-formpilot.sh
spec/: COMPANY.md  COMPANY_CONTEXT_INVESTORS_YC.md  DEALFLOW_SPEC.md  INTEGRATIONS_AND_MOAT.md  PRODUCT_SPEC.md  SOWFLOW_SPEC.md
src/: __init__.py
src/api/: main.py
src/core/: config.py
src/ingestors/: __init__.py  cursor_context.py
(+16 files in other folders)
